vlib/v/checker/tests/if_diff_expected_type_err.vv
const (
	some_runes       = [`a`, `b`, `c`]
	some_other_runes = [`c`, `b`, `a`]
)

fn main() {
	runes := if true { &some_runes } else { some_other_runes }
	println(runes)
}